# hackathon-I-physical-ai-book

./: .env.example  .gitignore  CLAUDE.md  IMPLEMENTATION_SUMMARY.md  README-agent.md  check_env.py  config.py  debug_agent_tools.py  debug_run_failure.py  list_models.py  pyproject.toml  pytest.ini  requirements.txt  ros2_workspace_setup.sh  run_pipeline.py  setup.cfg  test_agent_queries.py  test_agent_retrieval.py  test_assistant_creation.py  test_citation_functionality.py  test_comprehensive.py  test_determinism.py  test_frontend_backend_integration.py  test_health_endpoint.py  test_modes.py  test_openrouter.py  test_openrouter_model.py  test_rag_functionality.py  test_rag_pipeline.py  test_retrieval_direct.py  validate_implementation.py  verify_connection.py  verify_ros2_setup.py
.specify/memory/: constitution.md
backend/: .env.example  agent.py  api.py  config.py  pyproject.toml  requirements.txt  retrieve.py
backend/models/: health.py  query.py
backend/rag_pipeline/: main.py
backend/rag_pipeline/config/: settings.py
backend/rag_pipeline/embedding/: generator.py
backend/rag_pipeline/ingestion/: crawler.py  parser.py
backend/rag_pipeline/models/: data.py
backend/rag_pipeline/processing/: chunker.py  cleaner.py
backend/rag_pipeline/storage/: vector_db.py
backend/rag_pipeline/utils/: helpers.py
backend/routers/: health.py  rag.py
backend/services/: rag_service.py
history/adr/: 0001-vla-system-architecture.md  0002-homepage-enhancement-approach.md  (+6 more)
my-website/: docusaurus.config.ts  package-lock.json  sidebars.ts
tests/: test_retrieval.py
(+184 files in other folders)
