[project]
name = "rag-pipeline"
version = "0.1.0"
description = "RAG Pipeline for Website Content Ingestion, Embedding Generation, and Vector Storage"
authors = [{name = "AI Developer", email = "ai@example.com"}]
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.2",
    "cohere>=4.4.3",
    "qdrant-client>=1.8.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["backend"]